# MNA0D

./: createenvpython.md  readme.md  shell.html
mna/: Cargo.toml
mna/src/: main.rs
mna_administration/: .env  package-lock.json  package.json
mna_administration/public/: index.html
mna_administration/public/assets/css/: dashboard.css  features.css  new_client.css  shell.css  sidebars.css  signin.css  style.css
mna_administration/src/: index.js
mna_administration/src/components/Administration/: index.jsx
mna_administration/src/components/AppRoutes/: index.jsx
mna_administration/src/components/AuthGuard/: index.jsx
mna_administration/src/components/Dasboard/: index.jsx
mna_administration/src/components/Dashboard/: data.js  fetchInfectionData.jsx  index.jsx  infectionData.jsx
mna_administration/src/components/Documentation/: index.jsx
mna_administration/src/components/Features/: fetchUser.jsx  index.jsx
mna_administration/src/components/Footer/: index.jsx
mna_administration/src/components/Home/: index.jsx
mna_administration/src/components/Load_page/: index.jsx
mna_api/: .env  package-lock.json  package.json  readme.md  tsconfig.json
mna_api/src/: index.ts
mna_api/src/express/: index.ts
mna_api/src/mongo/: index.ts
mna_client/: Cargo.toml  readme.md
mna_client/log/: key.json
mna_client/python/: client.py  server.py
mna_client/python/exe linux/: dependances.sh
mna_client/src/: main.rs  readme.md
mna_client/static/: camera.html  index.html  screenshot.html
python test/: index.py  test.py
pythonEnv/: pyvenv.cfg
(+82 files in other folders)
