[package]
name = "mna"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
rdev = "0.5.3"
hyper = "1.3.1"
winit = "0.30.0"
image = "0.25.1"
actix-files = "0.6"
sysinfo = "0.30.12"
whoami = "1.2"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
local-ip-address = "0.6.1"
tokio = { version = "1", features = ["full"] }
arboard = "3.4.0"
screenshot-rs = "0.1.5"
auto-launch = "0.5.0"
serde_json = "1.0"
chrono = "0.4"